--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-chinhsua-nojeehr-dialog/account-management-chinhsua-nojeehr-dialog.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-chinhsua-nojeehr-dialog/account-management-chinhsua-nojeehr-dialog.component.html
@@ -10,7 +10,7 @@
 <div class="modal-content">
   <div class="modal-header">
     <div class="modal-title h4" id="example-modal-sizes-title-lg">
-      <span class="dialog-title">{{ 'ACCOUNTMANAGEMENT.THEMMOITAIKHOAN' | translate }}</span>
+      <span class="dialog-title">{{ 'ACCOUNTMANAGEMENT.CHINHSUATAIKHOAN' | translate }} {{ item.Username }}</span>
     </div>
   </div>
   <div class="overlay overlay-block cursor-default modal-body overflow-auto">
@@ -20,29 +20,11 @@
       </div>
     </ng-container>
     <div class="min-height: 404px; max-height: 70vh;">
-      <form [formGroup]="itemForm" class="form form-label-right">
+      <form [formGroup]="itemForm" action="#" class="form form-label-right">
         <div class="form-group row">
+          <!-- left -->
           <div class="col-lg-6">
-            <div class="row">
-              <div class="col-lg-8">
-                <mat-form-field class="example-full-width">
-                  <input formControlName="AnhDaiDien" placeholder="{{ 'COMMOM.AVATAR' | translate }}" matInput readonly />
-                </mat-form-field>
-              </div>
-              <div class="col-lg-4">
-                <input
-                  style="display: none"
-                  accept="image/jpg, image/jpeg, image/png"
-                  formControlName="file"
-                  id="file"
-                  type="file"
-                  class="form-control"
-                  (change)="onFileChange($event)"
-                  #hiddenfileinput
-                />
-                <button mat-raised-button class="ja_button ja_btn-addnew" (click)="hiddenfileinput.click()">Browse</button>
-              </div>
-            </div>
+            <!-- họ tên -->
             <div class="row">
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width">
@@ -56,32 +38,7 @@
                 </mat-form-field>
               </div>
             </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <input
-                    class="input-thuong mat-focused"
-                    formControlName="SoDienThoai"
-                    placeholder="{{ 'COMMOM.PHONE' | translate }}"
-                    matInput
-                  />
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <span matPrefix style="color: #1bc5bd">{{ CompanyCode }}.</span>
-                  <input
-                    class="input-batbuoc mat-focused"
-                    formControlName="TenDangNhap"
-                    placeholder="{{ 'ACCOUNTMANAGEMENT.TENDANGNHAP' | translate }}"
-                    matInput
-                    required
-                  />
-                </mat-form-field>
-              </div>
-            </div>
+            <!-- Email -->
             <div class="row">
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width">
@@ -89,40 +46,7 @@
                 </mat-form-field>
               </div>
             </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <input
-                    type="password"
-                    class="require"
-                    formControlName="MatKhau"
-                    placeholder="{{ 'COMMOM.PASSWORD' | translate }}"
-                    matInput
-                    required
-                  />
-                </mat-form-field>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="row">
-              <div class="col-lg-12">
-                <img [src]="imgFile" style="height: 107px" />
-              </div>
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <input
-                    class="input-batbuoc mat-focused required"
-                    formControlName="BirthDay"
-                    matInput
-                    [matDatepicker]="pickerStart"
-                    placeholder="{{ 'COMMOM.NGAYSINH' | translate }}"
-                  />
-                  <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
-                  <mat-datepicker #pickerStart></mat-datepicker>
-                </mat-form-field>
-              </div>
-            </div>
+            <!-- Phòng ban -->
             <div class="row">
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width" *ngIf="!(isFirstLoading$ | async)">
@@ -142,6 +66,37 @@
                 </mat-form-field>
               </div>
             </div>
+          </div>
+          <!-- right -->
+          <div class="col-lg-6">
+            <div class="row">
+              <div class="col-lg-12">
+                <mat-form-field class="example-full-width">
+                  <input
+                    class="input-batbuoc mat-focused required"
+                    formControlName="BirthDay"
+                    matInput
+                    [matDatepicker]="pickerStart"
+                    placeholder="{{ 'COMMOM.NGAYSINH' | translate }}"
+                  />
+                  <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
+                  <mat-datepicker #pickerStart></mat-datepicker>
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <mat-form-field class="example-full-width">
+                  <input
+                    class="input-thuong mat-focused"
+                    formControlName="SoDienThoai"
+                    placeholder="{{ 'COMMOM.PHONE' | translate }}"
+                    matInput
+                  />
+                </mat-form-field>
+              </div>
+            </div>
+            <!-- chức vụ -->
             <div class="row">
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width" *ngIf="!(isFirstLoading$ | async)">
@@ -158,20 +113,6 @@
                       {{ chucvu.Title }}
                     </mat-option>
                   </mat-select>
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <input
-                    type="password"
-                    class="require"
-                    formControlName="NhapLaiMatKhau"
-                    placeholder="{{ 'ACCOUNTMANAGEMENT.NHAPLAIMATKHAU' | translate }}"
-                    matInput
-                    required
-                  />
                 </mat-form-field>
               </div>
             </div>
