--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-chinhsua-jeehr-dialog/account-management-chinhsua-jeehr-dialog.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-chinhsua-jeehr-dialog/account-management-chinhsua-jeehr-dialog.component.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div class="overlay overlay-block cursor-default modal-body overflow-auto">
-    <ng-container *ngIf="isLoading$ | async">
+    <ng-container *ngIf="isFirstLoading$ | async">
       <div class="overlay-layer bg-transparent">
         <div class="spinner spinner-lg spinner-success"></div>
       </div>
@@ -22,159 +22,22 @@
     <div class="min-height: 404px; max-height: 70vh;">
       <form [formGroup]="itemForm" class="form form-label-right">
         <div class="form-group row">
-          <div class="col-lg-6">
-            <div class="row">
-              <div class="col-lg-8">
-                <mat-form-field class="example-full-width">
-                  <input formControlName="AnhDaiDien" placeholder="{{ 'COMMOM.AVATAR' | translate }}" matInput readonly />
-                </mat-form-field>
-              </div>
-              <div class="col-lg-4">
-                <input
-                  style="display: none"
-                  accept="image/jpg, image/jpeg, image/png"
-                  formControlName="file"
-                  id="file"
-                  type="file"
-                  class="form-control"
-                  (change)="onFileChange($event)"
-                  #hiddenfileinput
-                />
-                <button mat-raised-button class="ja_button ja_btn-addnew" (click)="hiddenfileinput.click()">Browse</button>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <input
-                    class="input-batbuoc mat-focused"
-                    formControlName="HoTen"
-                    placeholder="{{ 'COMMOM.HOTEN' | translate }}"
-                    matInput
-                    required
-                  />
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <input
-                    class="input-thuong mat-focused"
-                    formControlName="SoDienThoai"
-                    placeholder="{{ 'COMMOM.PHONE' | translate }}"
-                    matInput
-                  />
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <span matPrefix style="color: #1bc5bd">{{ CompanyCode }}.</span>
-                  <input
-                    class="input-batbuoc mat-focused"
-                    formControlName="TenDangNhap"
-                    placeholder="{{ 'ACCOUNTMANAGEMENT.TENDANGNHAP' | translate }}"
-                    matInput
-                    required
-                  />
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <input class="input-thuong mat-focused" formControlName="Email" placeholder="Email" matInput />
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <input
-                    type="password"
-                    class="require"
-                    formControlName="MatKhau"
-                    placeholder="{{ 'COMMOM.PASSWORD' | translate }}"
-                    matInput
-                    required
-                  />
-                </mat-form-field>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="row">
-              <div class="col-lg-12">
-                <img [src]="imgFile" style="height: 107px" />
-              </div>
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <input
-                    class="input-batbuoc mat-focused required"
-                    formControlName="BirthDay"
-                    matInput
-                    [matDatepicker]="pickerStart"
-                    placeholder="{{ 'COMMOM.NGAYSINH' | translate }}"
-                  />
-                  <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
-                  <mat-datepicker #pickerStart></mat-datepicker>
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width" *ngIf="!(isFirstLoading$ | async)">
-                  <mat-select formControlName="PhongBan" placeholder="{{ 'ACCOUNTMANAGEMENT.TENPHONGBAN' | translate }}" #singleSelect>
-                    <mat-option>
-                      <ngx-mat-select-search
-                        noEntriesFoundLabel="{{ 'ACCOUNTMANAGEMENT.KHONGTIMTHAY' | translate }}"
-                        placeholderLabel="{{ 'SEARCH.TIMKIEMTHEOTENPHONGBAN' | translate }}"
-                        formControlName="PhongBanFilterCtrl"
-                      >
-                      </ngx-mat-select-search>
-                    </mat-option>
-                    <mat-option *ngFor="let phongban of filterPhongBans | async" [value]="phongban.RowID">
-                      {{ phongban.DepartmentName }}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width" *ngIf="!(isFirstLoading$ | async)">
-                  <mat-select formControlName="Chucvu" placeholder="{{ 'ACCOUNTMANAGEMENT.TENCHUCVU' | translate }}" #singleSelect>
-                    <mat-option>
-                      <ngx-mat-select-search
-                        noEntriesFoundLabel="{{ 'ACCOUNTMANAGEMENT.KHONGTIMTHAY' | translate }}"
-                        placeholderLabel="{{ 'SEARCH.TIMKIEMTHEOTENCHUCVU' | translate }}"
-                        formControlName="ChucVuFilterCtrl"
-                      >
-                      </ngx-mat-select-search>
-                    </mat-option>
-                    <mat-option *ngFor="let chucvu of filterChucVus | async" [value]="chucvu.RowID">
-                      {{ chucvu.Title }}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <mat-form-field class="example-full-width">
-                  <input
-                    type="password"
-                    class="require"
-                    formControlName="NhapLaiMatKhau"
-                    placeholder="{{ 'ACCOUNTMANAGEMENT.NHAPLAIMATKHAU' | translate }}"
-                    matInput
-                    required
-                  />
-                </mat-form-field>
-              </div>
-            </div>
+          <div class="col-lg-12">
+            <mat-form-field class="example-full-width" *ngIf="!(isFirstLoading$ | async)">
+              <mat-select formControlName="NhanVien" placeholder="{{ 'ACCOUNTMANAGEMENT.TENNHANVIEN' | translate }}" #singleSelect>
+                <mat-option>
+                  <ngx-mat-select-search
+                    noEntriesFoundLabel="{{ 'ACCOUNTMANAGEMENT.KHONGTIMTHAY' | translate }}"
+                    placeholderLabel="{{ 'SEARCH.TIMTHEOTENNHANVIEN' | translate }}"
+                    formControlName="NhanVienFilterCtrl"
+                  >
+                  </ngx-mat-select-search>
+                </mat-option>
+                <mat-option *ngFor="let nhanvien of filterNhanViens | async" [value]="nhanvien.IDNV">
+                  {{ nhanvien.HoTen }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
           </div>
           <div class="col-lg-12">
             <span>{{ 'ACCOUNTMANAGEMENT.UNGDUNGDUOCSUDUNG' | translate }}:</span>
@@ -182,7 +45,12 @@
           <div class="col-lg-12">
             <section formArrayName="AppsCheckbox" *ngIf="!(isFirstLoading$ | async)">
               <div class="app-checbox">
-                <mat-checkbox class="example-margin" *ngFor="let app of AppsFromArray.controls; index as i" [formControlName]="i">
+                <mat-checkbox
+                  [disabled]="listApp[i].Disable"
+                  class="example-margin"
+                  *ngFor="let app of AppsFromArray.controls; index as i"
+                  [formControlName]="i"
+                >
                   {{ listApp[i].AppName }}
                 </mat-checkbox>
               </div>
@@ -194,17 +62,6 @@
   </div>
   <div class="modal-footer">
     <div>
-      <button
-        [disabled]="isLoadingSubmit$ | async"
-        [class.spinner]="isLoadingSubmit$ | async"
-        mat-raised-button
-        style="float: right; margin: 0"
-        class="ja_btn-addcontinue"
-        (click)="onSubmit(false)"
-      >
-        <mat-icon class="icon-repeat">repeat</mat-icon>
-        {{ 'COMMOM.LUUTIEPTUC' | translate }}
-      </button>
       <button
         [disabled]="isLoadingSubmit$ | async"
         [class.spinner]="isLoadingSubmit$ | async"
