--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/DepartmentManagement/department-management-list/department-management-list.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/DepartmentManagement/department-management-list/department-management-list.component.html
@@ -1,94 +1,87 @@
-<div class="card card-custom gutter-b">
+<style></style>
+<div class="card card-custom card-sticky gutter-b">
   <div class="card-header">
     <div class="card-title">
-      <span class="card-label">DANH SÁCH PHÒNG BAN, NHÓM</span>
+      <span class="card-label">{{ 'DEPARTMANAGEMENT.DANHSACHPHONGBAN' | translate }}</span>
+    </div>
+    <div class="card-search">
+      <app-jee-search-form (keywordEvent)="changeKeyword($event)" (filterEvent)="changeFilter($event)"></app-jee-search-form>
     </div>
     <div class="card-toolbar">
-      <button mat-button class="ja_button ja_btn-addnew" (click)="create()">Thêm mới</button>
+      <button mat-raised-button class="ja_button ja_btn-addnew" (click)="create()">{{ 'COMMOM.THEMMOI' | translate }}</button>
     </div>
   </div>
   <!-- body -->
   <div class="card-body">
-    <div class="table-responsive angular-bootstrap-table">
-      <table
-        mat-table
-        class="table table-head-custom table-vertical-center overflow-hidden"
-        [dataSource]="dataSource"
-        matSort
-        matSortActive="Fullname"
-        matSortDirection="asc"
-        matSortDisableClear
-      >
-        <ng-container matColumnDef="PhongBan">
-          <th mat-header-cell *matHeaderCellDef>
-            <span>Phòng ban</span>
+    <div class="table-responsive angular-bootstrap-table" [ngStyle]="{ height: getHeight() }">
+      <table class="table table-head-custom table-vertical-center overflow-hidden">
+        <thead>
+          <th style="min-width: 250px; padding-left: 32px">
+            <span>{{ 'DEPARTMANAGEMENT.TENPHONGBANNHOM' | translate }}</span>
+            <app-sort-icon
+              column="department"
+              [activeColumn]="sorting.column"
+              [activeDirection]="sorting.direction"
+              (sort)="sort($event)"
+            ></app-sort-icon>
           </th>
-          <td mat-cell *matCellDef="let r">
-            <div class>
-              <span>{{ r.DepartmentName }}</span>
-            </div>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="QuanLy">
-          <th mat-header-cell *matHeaderCellDef>
-            <span>Quản lý nhóm</span>
+          <th style="min-width: 150px">
+            <span>{{ 'DEPARTMANAGEMENT.QUANLYNHOM' | translate }}</span>
           </th>
-          <td mat-cell *matCellDef="let r">
-            <span *ngIf="r.DepartmentManager != ''">{{ r.DepartmentManager }}</span>
-            <span *ngIf="r.DepartmentManager == ''">
-              <mat-icon>person_add</mat-icon>
-            </span>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="TinhTrang">
-          <th mat-header-cell *matHeaderCellDef style="text-align: center">
-            <span>Tình trạng</span>
+          <th style="min-width: 100px">
+            <span>{{ 'COMMOM.TINHTRANG' | translate }}</span>
+            <app-sort-icon
+              column="tinhtrang"
+              [activeColumn]="sorting.column"
+              [activeDirection]="sorting.direction"
+              (sort)="sort($event)"
+            ></app-sort-icon>
           </th>
-          <td mat-cell *matCellDef="let r" style="text-align: center">
-            <mat-slide-toggle class="example-margin" (click)="changeTinhTrang(r.RowID)" [checked]="r.IsActive"> </mat-slide-toggle>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="GhiChu">
-          <th mat-header-cell *matHeaderCellDef>
-            <span>Ghi chú</span>
+          <th style="min-width: 300px">
+            <span>{{ 'COMMOM.GHICHU' | translate }}</span>
           </th>
-          <td mat-cell *matCellDef="let r">
-            <span>{{ r.Note }}</span>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="ThaoTac">
-          <th mat-header-cell *matHeaderCellDef style="text-align: center">
-            <span>Thao tác</span>
+          <th style="min-width: 100px">
+            <span>{{ 'COMMOM.THAOTAC' | translate }}</span>
           </th>
-          <td mat-cell *matCellDef="let r" style="text-align: center">
-            <mat-icon (click)="update(r)" style="cursor: pointer; color: #1bc5bd; font-size: 16px" aria-hidden="false"> mode_edit</mat-icon>
-            &nbsp;
-            <mat-icon (click)="delete(r)" style="cursor: pointer; color: red; font-size: 16px" aria-hidden="false">delete </mat-icon>
-          </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr
-          mat-row
-          *matRowDef="let row; columns: displayedColumns"
-          (click)="row.highlighted = !row.highlighted"
-          [ngClass]="{ hovered: row.hovered, highlighted: row.highlighted }"
-          (mouseover)="row.hovered = true"
-          (mouseout)="row.hovered = false"
-        ></tr>
+        </thead>
+        <tbody *ngIf="departmentManagementService.items$ | async">
+          <tr *ngFor="let r of (departmentManagementService.items$ | async).flat">
+            <td style="padding-left: 32px">
+              <div>
+                <span>{{ r.DepartmentName }}</span>
+              </div>
+            </td>
+            <td>
+              <div style="cursor: pointer" (click)="openQuanLyTrucTiepEdit(r.Username, r.DirectManager)">
+                <span *ngIf="r.DepartmentManager != ''">{{ r.DepartmentManager }}</span>
+                <span *ngIf="r.DepartmentManager == ''">
+                  <mat-icon>person_add</mat-icon>
+                </span>
+              </div>
+            </td>
+            <td style="justify-content: center">
+              <mat-slide-toggle (click)="changeTinhTrang(r.Username)" [checked]="r.IsActive"> </mat-slide-toggle>
+            </td>
+            <td>
+              <span>{{ r.Note }}</span>
+            </td>
+            <td>
+              <mat-icon (click)="update(r)" style="cursor: pointer; color: #1bc5bd; font-size: 16px" aria-hidden="false">
+                mode_edit</mat-icon
+              >
+              &nbsp;
+              <mat-icon (click)="delete(r)" style="cursor: pointer; color: red; font-size: 16px" aria-hidden="false">delete </mat-icon>
+            </td>
+          </tr>
+        </tbody>
       </table>
     </div>
-    <!-- start: BOTTOM -->
-    <div class="mat-table__bottom">
-      <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
-      <mat-paginator
-        [pageSize]="pageSize"
-        [pageSizeOptions]="[10, 20, 50, 100]"
-        [length]="dataSource.paginatorTotal$ | async"
-        [showFirstLastButtons]="true"
-      ></mat-paginator>
-    </div>
-    <!-- end: BOTTOM -->
+    <!-- end: Table -->
+    <app-paginator
+      class="d-flex justify-content-between align-items-center flex-wrap"
+      [paginator]="paginator"
+      [isLoading]="isLoading"
+      (paginate)="paginate($event)"
+    ></app-paginator>
   </div>
 </div>
