--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/DepartmentManagement/department-management-edit-dialog/department-management-edit-dialog.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/DepartmentManagement/department-management-edit-dialog/department-management-edit-dialog.component.html
@@ -1,77 +1,92 @@
-<div class="m-portlet">
-    <div class="m-portlet__head">
-        <div class="m-portlet__head-caption">
-            <div class="m-portlet__head-title">
-                <div class="row" style="height: 24px; display: inline">
-                    <h5 class="m-portlet__head-text">
-                        <span class="dialog-title">Thêm phòng ban/nhóm</span>
-                        <button style="float: right; margin: 0" mat-button class="ja_button ja_btn-addnew"
-                            (click)="onSubmit()">Thêm</button>
-                        <button style="float: right; margin: 0 12px 0 0;" mat-button class="ja_button ja_btn-goback"
-                            (click)="goBack()">Đóng</button>
-                    </h5>
-                </div>
-            </div>
-        </div>
+<div class="modal-content">
+  <div class="modal-header">
+    <div class="modal-title h4" id="example-modal-sizes-title-lg">
+      <span class="dialog-title">{{ 'DEPARTMANAGEMENT.THEMMOI' | translate }}</span>
     </div>
-    <div class="m-form m-form--fit m-form--label-align-right m-form--group-seperator-dashed">
-        <div class="m-portlet__body">
-            <form [formGroup]="itemForm" class="m-form m-form--group-seperator-dashed">
-                <div class="m-form__section m-form__section--first">
-                    <div class="row m-form__group">
-                        <div class="col-md-12 m--margin-bottom-10-mobile">
-                            <mat-form-field class="mat-form-field-fluid">
-                                <input formControlName="TenPhongBan" placeholder="Tên phòng ban" matInput required>
-                            </mat-form-field>
-                        </div>
-                        <div class="col-md-12 m--margin-bottom-10-mobile">
-                            <mat-form-field class="mat-form-field-fluid">
-                                <mat-select formControlName="QuanLyNhom" placeholder="Quản lý nhóm" #singleSelect>
-                                    <mat-option>
-                                        <ngx-mat-select-search noEntriesFoundLabel="Không tìm thấy"
-                                            placeholderLabel="Thêm quản lý nhóm" formControlName="FilterQuanLyNhom">
-                                        </ngx-mat-select-search>
-                                    </mat-option>
-                                    <mat-option *ngFor="let thanhvien of filterQuanLys | async"
-                                        [value]="thanhvien.Username">
-                                        {{thanhvien.Display}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div>
-                        <div class="col-md-12 m--margin-bottom-10-mobile">
-                            <mat-form-field class="mat-form-field-fluid">
-                                <mat-label>Thành viên</mat-label>
-                                <mat-chip-list #chipListThanhVien aria-label="Chọn thành viên">
-                                    <mat-chip *ngFor="let thanhVien of thanhViens" [selectable]="selectable"
-                                        [removable]="removable" (removed)="remove(thanhVien)">
-                                        {{thanhVien}}
-                                        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                                    </mat-chip>
-                                    <input placeholder="Thêm thành viên..." #thanhVienInput formControlName="ThanhVien"
-                                        [matAutocomplete]="autoThanhVien" [matChipInputFor]="chipListThanhVien"
-                                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                                        (matChipInputTokenEnd)="add($event)">
-                                </mat-chip-list>
-                                <mat-autocomplete #autoThanhVien="matAutocomplete" (optionSelected)="selected($event)">
-                                    <mat-option *ngFor="let thanhvien of filteredThanhViens | async"
-                                        [value]="thanhvien.Username">
-                                        {{thanhvien.Display}}
-                                    </mat-option>
-                                </mat-autocomplete>
-                            </mat-form-field>
-                        </div>
-                        <div class="col-md-12 m--margin-bottom-10-mobile">
-                            <mat-form-field class="mat-form-field-fluid">
-                                <textarea cols="12" rows="4" formControlName="MoTa" placeholder="Mô tả"
-                                    matInput> </textarea>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="m-portlet__foot m-portlet__no-border m-portlet__foot--fit text-right">
-        </div>
+    <div class="modal-title" style="display: inline">
+      <button
+        [disabled]="isLoadingSubmit$ | async"
+        [class.spinner]="isLoadingSubmit$ | async"
+        mat-raised-button
+        style="float: right; margin: 0"
+        class="ja_btn-addnew"
+        (click)="onSubmit()"
+      >
+        {{ 'COMMOM.LUU' | translate }}
+      </button>
+      <button mat-raised-button style="float: right; margin: 0; margin-right: 12px" class="ja_btn-goback" (click)="goBack()">
+        {{ 'COMMOM.TROLAI' | translate }}
+      </button>
     </div>
+  </div>
+  <div class="overlay overlay-block cursor-default modal-body overflow-auto">
+    <ng-container *ngIf="isLoading$ | async">
+      <div class="overlay-layer bg-transparent">
+        <div class="spinner spinner-lg spinner-success"></div>
+      </div>
+    </ng-container>
+    <ng-container>
+      <form [formGroup]="itemForm" class="m-form m-form--group-seperator-dashed">
+        <div class="row">
+          <div class="col-md-12">
+            <mat-form-field class="mat-form-field-fluid">
+              <input formControlName="TenPhongBan" placeholder="Tên phòng ban" matInput required />
+            </mat-form-field>
+          </div>
+          <div class="col-md-12">
+            <mat-form-field class="mat-form-field-fluid" *ngIf="!(isLoading$ | async)">
+              <mat-select formControlName="QuanLyNhom" placeholder="{{ 'DEPARTMANAGEMENT.QUANLYNHOM' | translate }}" #singleSelect>
+                <mat-option>
+                  <ngx-mat-select-search
+                    noEntriesFoundLabel="{{ 'ACCOUNTMANAGEMENT.KHONGTIMTHAY' | translate }}"
+                    placeholderLabel="{{ 'DEPARTMANAGEMENT.THEMQUANLYNHOM' | translate }}"
+                    formControlName="FilterQuanLyNhom"
+                  >
+                  </ngx-mat-select-search>
+                </mat-option>
+                <mat-option *ngFor="let quanly of filterQuanLys | async" [value]="quanly.Username">
+                  {{ quanly.Display }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col-md-12">
+            <mat-form-field class="mat-form-field-fluid">
+              <mat-label>{{ 'DEPARTMANAGEMENT.THANHVIEN' | translate }}</mat-label>
+              <mat-chip-list #chipListThanhVien>
+                <mat-chip
+                  *ngFor="let thanhVien of thanhViens"
+                  [selectable]="selectable"
+                  [removable]="removable"
+                  (removed)="remove(thanhVien)"
+                >
+                  {{ thanhVien }}
+                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+                <input
+                  placeholder="{{ 'DEPARTMANAGEMENT.THEMTHANHVIEN' | translate }} ..."
+                  #thanhVienInput
+                  formControlName="ThanhVien"
+                  [matAutocomplete]="autoThanhVien"
+                  [matChipInputFor]="chipListThanhVien"
+                  [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                  (matChipInputTokenEnd)="add($event)"
+                />
+              </mat-chip-list>
+              <mat-autocomplete #autoThanhVien="matAutocomplete" (optionSelected)="selected($event)">
+                <mat-option *ngFor="let thanhvien of filteredThanhViens | async" [value]="thanhvien.Username">
+                  {{ thanhvien.Display }}
+                </mat-option>
+              </mat-autocomplete>
+            </mat-form-field>
+          </div>
+          <div class="col-md-12">
+            <mat-form-field class="mat-form-field-fluid">
+              <textarea cols="12" rows="4" formControlName="MoTa" placeholder="Mô tả" matInput> </textarea>
+            </mat-form-field>
+          </div>
+        </div>
+      </form>
+    </ng-container>
+  </div>
 </div>
