--- a/BackEnd/JeeAccount/src/app/pages/_layout/components/topbar/topbar.component.scss
+++ b/BackEnd/JeeAccount/src/app/pages/_layout/components/topbar/topbar.component.scss
@@ -1,13 +1,50 @@
-.badge {
-    position: absolute;
-    top: -4.3px;
-    right: -4.3px;
-    border-radius: 50%;
-    background: red;
-    color: white;
-    font-size: 9.3px;
+.Notify {
+  animation: shake 0.8s ease-out;
+  animation-iteration-count: infinite;
 }
 
-.width {
-    width: 383px;
+@keyframes shake {
+  0% {
+    transform: rotate(0);
+  }
+  10% {
+    transform: rotate(5deg);
+  }
+  20% {
+    transform: rotate(10deg);
+  }
+  30% {
+    transform: rotate(0);
+  }
+  40% {
+    transform: rotate(-5deg);
+  }
+  50% {
+    transform: rotate(-10deg);
+  }
+  60% {
+    transform: rotate(0);
+  }
+  70% {
+    transform: rotate(5deg);
+  }
+  80% {
+    transform: rotate(10deg);
+  }
+  90% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-5);
+  }
+}
+
+.badge {
+  position: absolute;
+  top: -4.3px;
+  right: -4.3px;
+  border-radius: 50%;
+  background: red;
+  color: white;
+  font-size: 9.3px;
 }
