--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-search-form/jee-search-form.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-search-form/jee-search-form.component.html
@@ -77,9 +77,9 @@
         </div>
       </div>
     </form>
-    <div class="row" *ngIf="showSearch.isAdmin">
+    <div class="row">
       <div class="col-lg-6">
-        <div class="row">
+        <div class="row" *ngIf="showSearch.isAdmin">
           <div class="col-lg-12">
             <mat-checkbox [(ngModel)]="isAdmin"><span class="text">IsAdmin</span></mat-checkbox>
           </div>
@@ -92,7 +92,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-6 click-search">
+      <div class="col-lg-6 click-search mb-5">
         <button mat-raised-button class="ja_button ja_btn-addnew" (click)="clickSearch()">{{ 'SEARCH.TIMKIEM' | translate }}</button>
       </div>
     </div>
