--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/PermissionManagement/permission-management-admin-app-edit/permission-management-admin-app-edit.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/PermissionManagement/permission-management-admin-app-edit/permission-management-admin-app-edit.component.html
@@ -1,7 +1,7 @@
 <div class="modal-content">
   <div class="modal-header">
     <div class="modal-title h4" id="example-modal-sizes-title-lg">
-      <span class="dialog-title">{{ 'ACCOUNTMANAGEMENT.QUANLYTRUCTIEP' | translate }}</span>
+      <span class="dialog-title">{{ 'PHANQUYEN.THEMMOIADMINHETHONG' | translate }}</span>
     </div>
     <div class="modal-title" style="display: inline">
       <button
@@ -30,12 +30,12 @@
         <div class="form-group row">
           <div class="col-lg-12">
             <mat-form-field class="example-full-width">
-              <mat-select formControlName="QuanLyNhom" placeholder="{{ 'ACCOUNTMANAGEMENT.QUANLYTRUCTIEP' | translate }}" #singleSelect>
+              <mat-select formControlName="NhanVien" placeholder="{{ 'PHANQUYEN.THEMADMINHETHONG' | translate }}" #singleSelect>
                 <mat-option>
                   <ngx-mat-select-search
                     noEntriesFoundLabel="{{ 'ACCOUNTMANAGEMENT.KHONGTIMTHAY' | translate }}"
-                    placeholderLabel="{{ 'ACCOUNTMANAGEMENT.THEMQUANLYTRUCTIEP' | translate }}"
-                    formControlName="FilterQuanLyNhom"
+                    placeholderLabel="{{ 'PHANQUYEN.THEMADMINHETHONG' | translate }}"
+                    formControlName="FilterNhanVien"
                   ></ngx-mat-select-search>
                 </mat-option>
                 <mat-option *ngFor="let thanhvien of filterQuanLys | async" [value]="thanhvien.Username">
