--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/post-comment-content/post-comment-content.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/post-comment-content/post-comment-content.component.html
@@ -90,7 +90,7 @@
             </li>
             <li>
               <span>
-                {{ comment.DateCreated | date: 'dd/MM/yyyy hh:mm:ss' }}
+                {{ comment.DateCreated | date: 'dd/MM/yyyy hh:mm:ss a' }}
               </span>
             </li>
             <li *ngIf="comment.IsEdit">
