--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-edit-dialog/account-management-edit-dialog.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-edit-dialog/account-management-edit-dialog.component.html
@@ -26,11 +26,18 @@
             <div class="row">
               <div class="col-lg-8">
                 <mat-form-field class="example-full-width">
-                  <input formControlName="AnhDaiDien" placeholder="{{ 'COMMOM.AVATAR' | translate }}" matInput readonly />
+                  <input
+                    autocomplete="off"
+                    formControlName="AnhDaiDien"
+                    placeholder="{{ 'COMMOM.AVATAR' | translate }}"
+                    matInput
+                    readonly
+                  />
                 </mat-form-field>
               </div>
               <div class="col-lg-4">
                 <input
+                  autocomplete="off"
                   style="display: none"
                   accept="image/jpg, image/jpeg, image/png"
                   formControlName="file"
@@ -47,6 +54,7 @@
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width">
                   <input
+                    autocomplete="off"
                     class="input-batbuoc mat-focused"
                     formControlName="HoTen"
                     placeholder="{{ 'COMMOM.HOTEN' | translate }}"
@@ -60,6 +68,7 @@
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width">
                   <input
+                    autocomplete="off"
                     class="input-thuong mat-focused"
                     formControlName="SoDienThoai"
                     placeholder="{{ 'COMMOM.PHONE' | translate }}"
@@ -73,6 +82,7 @@
                 <mat-form-field class="example-full-width">
                   <span matPrefix style="color: #1bc5bd">{{ CompanyCode }}.</span>
                   <input
+                    autocomplete="off"
                     class="input-batbuoc mat-focused"
                     formControlName="TenDangNhap"
                     placeholder="{{ 'ACCOUNTMANAGEMENT.TENDANGNHAP' | translate }}"
@@ -85,7 +95,7 @@
             <div class="row">
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width">
-                  <input class="input-thuong mat-focused" formControlName="Email" placeholder="Email" matInput />
+                  <input autocomplete="off" class="input-thuong mat-focused" formControlName="Email" placeholder="Email" matInput />
                 </mat-form-field>
               </div>
             </div>
@@ -93,6 +103,7 @@
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width">
                   <input
+                    autocomplete="off"
                     type="password"
                     class="require"
                     formControlName="MatKhau"
@@ -112,6 +123,7 @@
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width">
                   <input
+                    autocomplete="off"
                     class="input-batbuoc mat-focused required"
                     formControlName="BirthDay"
                     matInput
@@ -165,6 +177,7 @@
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width">
                   <input
+                    autocomplete="off"
                     type="password"
                     class="require"
                     formControlName="NhapLaiMatKhau"
