update thong bao avatar

--- a/BackEnd/JeeAccount/src/app/pages/_layout/components/topbar/topbar.component.scss
+++ b/BackEnd/JeeAccount/src/app/pages/_layout/components/topbar/topbar.component.scss
@@ -48,3 +48,13 @@
   color: white;
   font-size: 9.3px;
 }
+
+.nhacnho {
+  border-radius: 50%;
+  background: red;
+  color: #fff;
+  text-align: center;
+  font-size: 14pxpx;
+  font-size: 14px;
+  width: 24px;
+}
