--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/post-comment-content/post-comment-content.component.scss
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/post-comment-content/post-comment-content.component.scss
@@ -126,6 +126,7 @@ ul {
   cursor: pointer;
 
   .icon {
+    margin-top: 6px;
     margin-left: 6px;
     margin-right: 6px;
     margin-bottom: 6px;
